--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "pre-commit": "lint-staged",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "predeploy": "npm run build",
+    "deploy": "npx gh-pages -b gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
